@@ -16,7 +16,7 @@
 ##############################################################################
 """ Topic:
 
-$Id: ATSortCriterion.py,v 1.9 2004/07/13 13:12:56 dreamcatcher Exp $
+$Id: ATSortCriterion.py,v 1.10 2004/07/19 11:57:36 godchap Exp $
 """
 
 __author__  = 'Christian Heimes'
@@ -28,7 +28,8 @@ from AccessControl import ClassSecurityInfo
 
 from Products.ATContentTypes.config import *
 from Products.ATContentTypes.types.criteria import registerCriterion, \
-    ALL_INDICES
+    SORT_INDICES
+from Products.ATContentTypes.Permissions import ChangeTopics
 from Products.ATContentTypes.interfaces.IATTopic import IATTopicSortCriterion
 from Products.ATContentTypes.types.criteria.ATBaseCriterion import ATBaseCriterion
 from Products.ATContentTypes.types.criteria.schemata import ATSortCriterionSchema
@@ -55,4 +56,4 @@ class ATSortCriterion(ATBaseCriterion):
 
         return tuple(result)
 
-registerCriterion(ATSortCriterion, ALL_INDICES)
+registerCriterion(ATSortCriterion, SORT_INDICES)
